[tool.poetry]
name = "h2w"
version = "0.1.0"
description = "Useful collection of snippets that I called Hello World World"
authors = ["Denis Capeto"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "2.25.1"
boto3 = "1.25.3"
kafka-python = "2.0.2"
aiohttp = "3.7.4"

[tool.poetry.dev-dependencies]
isort = "5.7.0"
flake8 = "5.0.4"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
